# myathenaeum

./: main.py  pyproject.toml
src/: run.py
src/my-athenaeum/: __init__.py  datamodel.py  openlib.py
src/myathenaeum/: __init__.py  app.py  datamodel.py  db_models.py  openlib.py  routes.py
src/myathenaeum/static/css/: main.css
src/myathenaeum/templates/: base.html  index.html
