[project]
name = "my-athenaeum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.3.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "ruff>=0.13.3",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 100


[tool.ruff.lint.pydocstyle]
convention = "google"
